kubernetes/api-docs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bahn-alarm-api-docs
  namespace: bahn-alarm
  labels:
    app: bahn-alarm-api-docs
spec:
  selector:
    app: bahn-alarm-api-docs
  ports:
    - name: web
      targetPort: web
      port: 80
